[package]
name = "tag-spider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
env_logger = "0.11.7"
futures = "0.3"
log = "0.4.27"
once_cell = "1.20.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust-stemmers = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thirtyfour = "0.35.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

